<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    public function up(): void
    {
        Schema::create('utilisateurs', function (Blueprint $table) {
            $table->id();
            $table->string('email')->unique();
            $table->string('mot_de_passe');
            $table->enum('role', ['patient', 'secretaire', 'dentiste', 'admin']);
            $table->enum('statut', ['actif', 'inactif', 'suspendu'])->default('actif');
            $table->datetime('date_creation')->useCurrent();
            $table->datetime('derniere_connexion')->nullable();
            $table->timestamps();
        });
    }

    public function down(): void
    {
        Schema::dropIfExists('utilisateurs');
    }
};
